--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,6 @@
     <title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Coursera, It's a great course!</h1>   
+<h1>Hello World, It's a great DAY! join it.</h1>   
 </body>
 </html>
